# cutlass_hopper_tutorial

./: .gitmodules  CMakeLists.txt  README.md
include/: common.h  fp8_gemm_utils.h  gemm_configs.h  gemm_util.h  reference.h
scripts/: build_linux.sh  build_win.sh  create_docker.sh  create_docker_2308.sh  create_docker_2402.sh
src/: CMakeLists.txt
src/c0/: CMakeLists.txt  c0_test_warp_index.cu
src/c1/: CMakeLists.txt  gemm_kernel_swizzle.cu  l2_cache_swizzle.cu
src/c10/: CMakeLists.txt  i2f_optimize.cu
src/c10/0_handle_gemm/: 0_cublas_gemm.h  1_naive_gemm.h  2_gmem_coalescing.h  3_smem_caching.h  4_1d_blocktiling_gemm.h  5_2d_blocktiling_gemm.h  9_cutlass_gemm.h  CMakeLists.txt  gemm_test.cu  utils.h
src/c10/0_kernel_schedule/0_warp_specialization/: cutlass_warp_specialization_kernel.cu  hopper_gemm_template_sm90.h  hopper_gemm_ws.h  hopper_gemm_ws_kernel_template_sm90.h  hopper_gemm_ws_template_sm90.h  kernel_traits.h  mainloop_sm90_tma_ws.hpp  tile_scheduler.hpp
src/c10/1_StreamK/: CMakeLists.txt
src/c10/1_cute_gemm/: CMakeLists.txt
src/c10/1_cute_gemm/0_tiled_mma/: CMakeLists.txt  tiled_mma_atom_layout.cu
src/c10/1_cute_gemm/0_warp_specialization_gemm/: CMakeLists.txt  warp_specialization_gemm.cu
src/c10/1_cute_gemm/1_warp_specialization_cooperative_gemm/: CMakeLists.txt  warp_specialization_cooperative_gemm.cu
src/c10/1_cute_gemm/2_warp_specialization_pingpong_gemm/: CMakeLists.txt  warp_specialization_pingpong_gemm.cu
src/c10/1_kernel_schedule/: CMakeLists.txt  cutlass_warp_specialization_kernel.cu
src/c10/1_kernel_schedule/0_warp_specialization/: hopper_gemm_ws.h  hopper_gemm_ws_kernel_template_sm90.h  kernel_traits.h  tile_scheduler.hpp
src/c10/2_cutlass_gemm/: 0_warp_specialization_gemm.cu  0_warp_specialization_kernel.cu  1_fp8_warp_specialization_gemm.cu  CMakeLists.txt  collective_builder_mainloop.md
src/c10/3_GoupedGEMM/: moe_ffn.py
src/c10/3_kernel_design/0_warp_specialization/: hopper_gemm_ws_template_sm90.h  mainloop_sm90_tma_ws.hpp
src/c10/4_tile_schedule/stream_k/: tile_scheduler.hpp
src/c10/6_group_gemm/: 0_hopper_grouped_gemm.cu  0_hopper_grouped_gemm_refactor.cu  CMakeLists.txt  grouped_mixed_dtype_utils.hpp  hopper_int4_fp8_group_gemm.cu  mainloop_sm90_tma_gmma_ws_with_blockscaling.hpp  sm90_gemm_array_tma_warpspecialized_cooperative_with_blockscaling.hpp
src/c10/7_mixed_gemm/: CMakeLists.txt
src/c10/7_mixed_gemm/0_numeric_convert/: CMakeLists.txt  i2f_optimize.cu
src/c10/7_mixed_gemm/1_w4a8_dense_gemm/: CMakeLists.txt  builder.hpp  dispatch_policy_extra.hpp  gemm_universal_adapter_x.h  hopper_int4_fp8_gemm.cu  kernel_traits.h  mainloop_sm90_tma_gmma_ws.hpp  mainloop_sm90_tma_gmma_ws_x.hpp  mixed_input_utils_x.hpp  sm90_epilogue_tma_warpspecialized_x.hpp  sm90_gemm_tma_warpspecialized_cooperative_x.hpp
src/c10/7_mixed_gemm/1_w4a8_dense_gemm/refactor/: hopper_gemm_kernel.h  hopper_gemm_kernel_launch.h  kernel_traits.h  mainloop_sm90_tma_gmma_ws.hpp
src/c10/7_mixed_gemm/2_w4a8_group_gemm/: CMakeLists.txt  builder.hpp  dispatch_policy_extra.hpp  hopper_int4_fp8_group_gemm.cu
src/c10/7_mixed_gemm/3_refactor_w4a8_dense_gemm/: cli_options.h  hopper_int4_fp8_gemm.cu  kernel_traits.h
src/c10/7_mixed_gemm/refactor/: gemm_config.h  kernel_traits.h
src/c10/8_deep_gemm/: CMakeLists.txt  compiler.cuh  deep_gemm.cu  deep_gemm.h  jit_tunner.cuh  jit_utils.cuh  scheduler.cuh  test_deep_gemm.cu  utils.cuh
src/c10/9_fp8_gemm/: CMakeLists.txt  test_fp8_gemm.cu
src/c10/9_fp8_gemm/0_fp8_warp_specialization_gemm/: fp8_warp_specialization_gemm.cuh
src/c10/9_fp8_gemm/1_deep_gemm_w8a8/: CMakeLists.txt  compiler.cuh  deep_gemm_runner.h  fp8_gemm.cuh  jit_utils.cuh  runtime.cuh  scheduler.cuh
src/c10/9_fp8_gemm_opt/: test_fp8_gemm.cu
src/c10/9_fp8_gemm_opt/0_fp8_warp_specialization_gemm/: fp8_warp_specialization_gemm.cuh
src/c10/9_fp8_gemm_opt/1_deep_gemm_w8a8_gemm/: deep_gemm_runner.h  fp8_gemm.cuh  interleave_ffma.cuh  jit_tunner.cuh  scheduler.cuh  utils.cuh
src/c13/: CMakeLists.txt
src/c13/4_LMDeployDecodingAttention/: CMakeLists.txt  arch.h  attention_params.h  attention_universal.h  block.h  decoding.cu  decoding_config.h  decoding_template.h  impl.h  impl_16816.h  impl_1688.h  impl_81616.h  impl_884.h  impl_m16n8.h  impl_simt.h  iterator.h  iterator_sm70.h  iterator_sm80.h  kv_cache_utils_v2.cu  kv_cache_utils_v2.h  mainloop.h  mainloop_sm80.h  quantization.h  reduce.cu  reduce.h  reduce_kernel.h  reduce_kernel_utils.cuh  reference.cu  reference.h  rotary_embedding.h  test_attention.cu  test_utils.h  unfused_attention_kernels.cu  unfused_attention_kernels.h  utils.cc  utils.h
src/c13/4_LMDeployDecodingAttention/core/: array.h  array_ops.h  layout.h  math.h  mma.h  pipe_iter.h  smem.h  sub_byte_ptr.h  thread_map.h
src/c14/deepep/: moe_ffn.py
src/c15/: CMakeLists.txt  all2all_example.cu  sync_host_device_example.cu
src/c3/: CMakeLists.txt  tma_load_and_store.h
src/c5/: CMakeLists.txt
src/c6/: CMakeLists.txt
src/c6/0_tma/: CMakeLists.txt  test_tma_load_store.cu  tma_load_and_store.h  tma_load_multicast_and_store.h
src/c8/: CMakeLists.txt  gemm_kernel_raw.cu  gemm_kernel_swizzle.cu  l2_cache_swizzle.cu  query_block_mapped_sm_id.cu
src/utils/: CMakeLists.txt  Tensor.cc  Tensor.h  allocator.h  cublasAlgoMap.h  cublasMMWrapper.cc  cublasMMWrapper.h  cuda_bf16_fallbacks.cuh  cuda_type_utils.cuh  cuda_utils.cc  cuda_utils.h  gpu_buf.h  logger.cc  logger.h  memory_utils.cu  memory_utils.h  rng_utils.cu  rng_utils.h
